--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.3",
-    "express": "^4.16.4"
+    "express": "^4.17.0",
+    "nodemon": "^1.19.0"
   }
 }
